# mumlib

./: .gitignore  CMakeLists.txt  Description.txt
debian/: Vagrantfile  build-deb.sh  build.sh  changelog  control  copyright  prereqs.sh  rules  vag-provision.sh
debian/t/: 01-debpkg.t
